--- a/src/index.css
+++ b/src/index.css
@@ -6,18 +6,11 @@
   padding: 0;
 }
 
-h1 {
-  color: #ffffff;
-}
-
 body {
   margin: 0;
   font-family: "Outfit", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
     "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  background-color: magenta;
 }
 
 ul {
@@ -31,4 +24,10 @@ a {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.box {
+  background-color: blueviolet;
+  height: 100px;
+  width: 100px;
 }
